--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 Django==1.5.1
 MySQL-python==1.2.4
+dj-database-url==0.2.1
 django-debug-toolbar==0.9.4
 docutils==0.10
+gunicorn==17.5
 psycopg2==2.5.1
 wsgiref==0.1.2
