--- a/random_quote/requirements.txt
+++ b/random_quote/requirements.txt
@@ -1,8 +1,10 @@
 Django==1.5.1
 MySQL-python==1.2.4
+South==0.8.1
 dj-database-url==0.2.1
 django-debug-toolbar==0.9.4
+django-redis==3.3
 docutils==0.10
 gunicorn==17.5
-psycopg2==2.5.1
+redis==2.7.6
 wsgiref==0.1.2
